<resources>
    <string name="app_name">COVNINFO</string>
    <string name="summary">Summary</string>
    <string name="indonesia">Indonesia</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="not_update">Data has not been updated</string>
    <string name="confirmed">Positive</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="legends">Legends :</string>
    <string name="world_summary_data">World Summary Data</string>
    <string name="from_corona">From Covid-19</string>
    <string name="daily_notif">Daily Notification</string>
    <string name="key_daily_reminder">daily reminder key</string>
    <string name="daily_reminder_summary">Daily Reminder Every 08:00</string>
    <string name="daily_reminder_setup">Daily Reminder Is Setup</string>
    <string name="daily_reminder_canceled">Daily Reminder Canceled</string>
    <string name="notif_title">Check Your Apps, For New Updated Data</string>
    <string name="hospital">Hospital</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention">Prevention</string>
    <string name="redirect">Redirect To Web Page…</string>
    <string name="advice_from_who">Advice From WHO</string>
    <string name="aboutLabelSubtitle">This is an application to find out news on Corona Virus disease</string>
    <string name="aboutLabelVersion">Version</string>
    <string name="aboutLabelDeveloper">Developer</string>
    <string name="aboutTextDeveloper">Moh Husni Mubaraq</string>
    <string name="aboutLabelTester">App Tester</string>
    <string name="aboutTextTester">Purnomo Lamala</string>
    <string name="aboutTextTesterTwo">Muh Iksan Raharjo</string>
    <string name="aboutLabelLicense">License</string>
    <string name="aboutTextLicense">MIT License (c) 2020 Moh Husni Mubaraq</string>
    <string name="aboutLabelDatabase">Database</string>
    <string name="aboutTextDatabase">JHU CSSE (Global)</string>
    <string name="aboutTextDatabaseTwo">Indonesian Ministry of Health (Indonesia)</string>
    <string name="aboutLabelJsonApi">API</string>
    <string name="aboutTextJsonApi">Mathdroid</string>
    <string name="aboutTextJsonApiTwo">Kawalcorona</string>
    <string name="aboutTextJsonApiThree">ApiNews</string>
    <string name="find_me_on_github_github_com_whoishusni">Find Me On Github :</string>
    <string name="github">Github</string>
    <string name="indonesia_summary_data">Indonesia Summary Data</string>
    <string name="source_kemenkes">Source : Kemenkes</string>
    <string name="source_JHU">Source : JHU CSSE</string>
    <string name="province">Province</string>
    <string name="news">News</string>
    <string name="sourceNews">Source : </string>
    <string name="authorNews">Author : </string>
    <string name="dateNews">Date : </string>
    <string name="read_more">Read More</string>
    <string name="description_unavailable">Description  is not available, please press the button below to view the news</string>
    <string name="made_with">Made With</string>
    <string name="for_human">For Human</string>
    <string name="editor">Editor</string>
    <string name="zero">0</string>


</resources>
