<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginHorizCard"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="@dimen/marginVertiCard"
            android:layout_marginStart="@dimen/marginHorizCard"
            android:layout_marginEnd="@dimen/marginHorizCard"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutLabelSubtitle"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="5dp"
            app:srcCompat="@color/design_default_color_secondary"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/aboutLabelVersion"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextVersion"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/aboutLabelDeveloper"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextDeveloper"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/aboutLabelLicense"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextLicense"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/aboutLabelDatabase"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextDatabase"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/aboutLabelJsonApi"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutTextJsonApi"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_me_on_github_github_com_whoishusni"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/githubBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:drawableTop="@drawable/ic_person_black_24dp"/>

    </LinearLayout>
</ScrollView>